2011-10-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘COMMAND_LINE_VARYING’ more.

	Omission from 2011-10-28, "Add
	abstraction: COMMAND_LINE_VARYING".

	* rcsdiff.c (main): Use ‘COMMAND_LINE_VARYING’ for "-M".

2011-10-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: one_beyond_last_dir_sep

	* b-beer.h (one_beyond_last_dir_sep): New func decl.
	* b-peer.c (one_beyond_last_dir_sep): New func.
	(find_peer_prog): Use ‘one_beyond_last_dir_sep’.

2011-10-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: VX

	* co.c (VX): New #define.
	(buildjoin): Use ‘VX’.

2011-10-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use portable Makefile subst-ref variable syntax.

	The syntax $(VAR:%=%SUFFIX) is a GNU Make extension.

	* Makefile.am (BUILT_SOURCES): Use $(VAR:=SUFFIX).

2011-10-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: COMMAND_LINE_VARYING

	* rcsdiff.c (COMMAND_LINE_VARYING): New #define.
	(main): Use ‘COMMAND_LINE_VARYING’.

2011-10-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: Init rcsdiff(1) auto var.

	Omission from 2011-10-13, "Remove ‘workptr’,
	‘workstat’ from global state of rcsdiff(1)".

	* rcsdiff.c (main): Clear out ‘work’.

2011-10-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Use gnulib to implement ‘exiting’ func attribute.

	* base.h (exiting): Use ‘_Noreturn’ directly.

2011-10-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Decruft: Remove obsolete handling for broken ‘printf %.2d’.

	* rcstime.c (proper_dot_2): Delete macro.
	(time2date, date2str): Use format string with ".2d" directly.

2011-10-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	co: Mention ‘-S’ in help text.

	Omission from 2011-10-11, "Add
	option ‘-S’ to enable "self-same" mode".

	* co.c: Mention ‘-S’ in help text.

2011-10-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘rmvlocklst’ from global state of rcs(1).

	* rcs.c (struct admin_closure): Add member ‘byelocks’.
	(rmvlocklst): Delete var.